[package]
name = "pagerank"
version = "0.1.0"
authors = ["Frank McSherry <fmcsherry@me.com>"]

[dependencies]
core_affinity = "0.5.9"
getopts="*"
time = "*"
mmap="*"
rand="*"
byteorder="*"
timely = { git = "https://github.com/frankmcsherry/timely-dataflow" }
timely_sort="0.1.*"

[profile.release]
opt-level = 3
debug = true
rpath = false
lto = false
debug-assertions = false
